--- a/crypto-trader/composer.json
+++ b/crypto-trader/composer.json
@@ -6,7 +6,10 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "andreas-glaser/poloniex-php-client": "dev-master",
         "fideloper/proxy": "^4.0",
+        "irazasyed/larasupport": "~1.0",
+        "irazasyed/telegram-bot-sdk": "dev-develop",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0"
     },
